--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "chart.js": "^4.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dwolla-v2": "^3.4.0",
     "lucide-react": "^0.525.0",
     "next": "15.3.4",
     "node-appwrite": "^17.0.0",
+    "plaid": "^36.0.0",
     "postcss": "^8.5.6",
     "query-string": "^9.2.2",
     "react": "^19.0.0",
@@ -29,6 +31,7 @@
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.60.0",
+    "react-plaid-link": "^4.0.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
